# Python-project-structure

./: LICENSE  README.md  pyproject.toml
src/: __main__.py
src/myturtle/: __init__.py  myturtle.py
src/packaging_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/snake/: __init__.py  snake.py
