[tool.poetry]
name = "build-pyproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "snake", from = "src" },
	{ include = "myturtle", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "2.1.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
# Exclude the following directories from linting.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "*/__init__.py",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint]
# Enable the following linters.
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "SIM", # flake8-simplify
    "RSE", # flake8-raise
    #"PD" uncomment this to enable pandas-vet linter
    #"PERF" uncomment this to enable Perflint linter
    #"FURB" uncomment this to enable refurb linter
]

# Disable the following linters.
ignore = [
    "D211",
    "D212",
    "D400",
    "D401",
    "D417",   # Missing argument descriptions in docstrings
    "W191",   # the following rules come from here: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Unlike Black, do not respect magic trailing commas.
skip-magic-trailing-comma = true

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.isort]
# Do not split imports into multiple lines when there is a trailing comma.
split-on-trailing-comma = false


[tool.ruff.per-file-ignores]
# A list of mappings from file pattern to rule codes or prefixes to exclude, when considering any matching files.
"__init__.py" = [
    "E402",
] #  Ignore `E402` (import violations) in all `__init__.py` files
"tests/*" = ["D", "E"] # Ignore pydocstyle errors in all tests

[tool.coverage.run]
branch = true
relative_files = true
source = ["src"]
omit = []
parallel = false

[tool.coverage.report]
# See more details here https://coverage.readthedocs.io/en/latest/config.html
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    "@(typing(_extensions)?\\.)?overload",
    "if (typing(_extensions)?\\.)?TYPE_CHECKING:",
]

ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "6.0"
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]